correct page wrapper top spacing

--- a/app/frontend/src/styles/application/home.scss
+++ b/app/frontend/src/styles/application/home.scss
@@ -71,3 +71,7 @@
     display: flex;
   }
 }
+
+.home_index .govuk-main-wrapper {
+  padding-top: govuk-spacing(2);
+}
